return what is taken a way ;)
Monotone-Parent: 040261f922cc68f44654dfae69441f9083d7a8ee
Monotone-Revision: 8957817dd3b7e5de6b1ed79fd3b522c98db0ed82

Monotone-Author: walking@mail.i2p
Monotone-Date: 2010-05-02T11:30:31
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -293,6 +293,17 @@
         </copy>
     </target>
 
+    <!-- only what is needed for debian, etc. -->
+    <target name="preppkg-linux-only" depends="preppkg-linux">
+        <!-- rip the non-linux stuff out of jbigi.jar -->
+        <mkdir dir="tmpextract" />
+        <unjar src="build/jbigi.jar" dest="tmpextract/" />
+        <jar destfile="pkg-temp/lib/jbigi.jar" >
+            <fileset dir="tmpextract/" includes="*linux*" />
+        </jar>
+        <delete dir="tmpextract/" />
+    </target>
+
     <target name="preppkg-linux" depends="preppkg-base">
         <copy file="installer/resources/runplain.sh" todir="pkg-temp/" />
         <copy file="apps/i2psnark/launch-i2psnark" todir="pkg-temp/" />
