snark listing icons and cleanups
Monotone-Parent: 13c351b9c26b147632b40df8c0e8d9ca7d2d4485
Monotone-Revision: 1f7fc45ac173e4511d53bd8cba212eb2282042eb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-25T13:08:34
Monotone-Branch: i2p.i2p

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -52,7 +52,7 @@
           <classes dir="./build/obj" includes="**/I2PSnarkServlet*.class" />
      -->
     <target name="war" depends="jar, bundle"> 
-        <war destfile="../i2psnark.war" webxml="../web.xml">
+        <war destfile="../i2psnark.war" webxml="../web.xml" basedir="../" includes="_icons/*" >
           <!-- include only the web stuff, as of 0.7.12 the router will add i2psnark.jar to the classpath for the war -->
           <classes dir="./build/obj" includes="**/web/*.class" />
         </war>
