mentioned path of jetty to be put in
Monotone-Parent: 3d8db0a6ca825382549e5c10881165104631ea36
Monotone-Revision: 3c281fff42f085a5d6e3b949fe5b31bffb192b41

Monotone-Author: echelon@mail.i2p
Monotone-Date: 2010-06-14T17:29:23
Monotone-Branch: i2p.i2p

--- a/apps/jetty/build.xml
+++ b/apps/jetty/build.xml
@@ -29,8 +29,8 @@
         <echo message="but strongly recommended, since they are used by some applications" />
         <echo message="on top of I2P, like the router console." />
         <echo message="" />
-        <echo message="Even if you deploy the Jetty archive manually, the build script will" />
-        <echo message="still attempt to verify its checksums, which must be:" />
+        <echo message="Even if you deploy the Jetty archive manually into directory apps/jetty/," />
+        <echo message="the build script will still attempt to verify its checksums, which must be:" />
         <echo message="SHA1 ${jetty.sha1}" />
         <echo message="" />
         <input message="Download Jetty archive automatically?" validargs="y,n" addproperty="jetty.download" />
