explicitly set shared client for POP (defaults true anyway)
Monotone-Parent: 4e492cb34b44af51c7b446f7e75943a749330822
Monotone-Revision: 384cb8e49cd9ca7501960b8c2b8b020b7bc5af89

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-26T04:06:32
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -115,3 +115,4 @@ tunnel.5.option.i2p.streaming.connectDelay=1000
 tunnel.5.startOnLoad=true
 tunnel.5.targetDestination=pop.postman.i2p
 tunnel.5.type=client
+tunnel.5.sharedClient=true
