* I2PTunnel: Add default HTTPS outproxy
Monotone-Parent: 1a9ff9ff795d53748de4fab02700ff6e83265a70
Monotone-Revision: ff4f3eafd2bc1b996319274d0be7825d80310020

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-29T02:25:29
Monotone-Branch: i2p.i2p

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -116,3 +116,22 @@ tunnel.5.startOnLoad=true
 tunnel.5.targetDestination=pop.postman.i2p
 tunnel.5.type=client
 tunnel.5.sharedClient=true
+
+# HTTPS (CONNECT) outproxy
+tunnel.6.name=I2P HTTPS Proxy
+tunnel.6.description=HTTPS proxy for browsing eepsites and the web
+tunnel.6.type=connectclient
+tunnel.6.sharedClient=true
+tunnel.6.interface=127.0.0.1
+tunnel.6.listenPort=4445
+tunnel.6.proxyList=outproxy.h2ik.i2p
+tunnel.6.i2cpHost=127.0.0.1
+tunnel.6.i2cpPort=7654
+tunnel.6.option.inbound.nickname=shared clients
+tunnel.6.option.outbound.nickname=shared clients
+tunnel.6.option.i2cp.reduceIdleTime=900000
+tunnel.6.option.i2cp.reduceOnIdle=true
+tunnel.6.option.i2cp.reduceQuantity=1
+tunnel.6.option.i2p.streaming.connectDelay=1000
+tunnel.6.startOnLoad=true
+
